# zCUT

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  printer.c  zcut.c  zcut.h  zcut_main.c
tests/: CMakeLists.txt  test_assertion.c  test_link_zcut.c  test_no_test.c  test_sample.c  test_structure.c  test_ut_init_no_called_error.c
